--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Malla de mi carrera</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Malla Curricular - Genética</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Malla Curricular</h1>
+  <h1>Malla Curricular - Licenciatura en Genética</h1>
   <div id="malla"></div>
 
   <script src="script.js"></script>
